pagina inicial del portfolio y las extensiones listas, agregar carpetas de piccantino y lolo surf. Parte 2

--- a/index.html
+++ b/index.html
@@ -20,21 +20,17 @@
   <main>   
     <ul>
       <li>
-        <a href="#">my travel</a>
+        <a href="./pages/mytravel.html">my travel</a>
       </li>
       <li>
-        <a href="#">my project</a>
+        <a href="./pages/proyectos.html">my projects</a>
       </li>
       <li>
         <a href="#">linkedin</a>
       </li>
       <li>
-        <a href="#">email</a>
+        <a href="./pages/contacto.html">contacto</a>
       </li>
-      <li>
-        <a href="#">email</a>
-      </li>
-      
     </ul>
   </main>
 
