--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -4,55 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="../estilo.css">
     <title>tomas mogaburu boca</title>
 
 
 </head>
 <body>
-    <a href="../index.html"><h1>portfolio <em>tomas mogaburu boca</em></h1></a>
-
-    <div>
-
-       <h2>proyectos</h2> 
-
-        <table border="1" padding="5">
-           <tr>
-                <th>empresa</th>
-                <th>año</th>
-                <th>rubro</th>
-           </tr>  
-           <tr>
-               <th>la madrugada</th>
-               <td>2021</td>
-               <td>Empresa de agronegocios</td>
-           </tr>
-           <tr>
-               <th>lolo</th>
-               <td>2022</td>
-               <td>e-commerce de surf</td>
-           </tr>
-           <tr>
-               <th>bigg</th>
-               <td>2013</td>
-               <td>empresa dedicada al fitness</td>
-           </tr>
-        </table>
-    </div>
-
-        <a href="../index.html">Volver al inicio.</a>
-
-        <footer>
-            <ul>
-                <a href="https://www.instagram.com/tomasmogaburu/?hl=es-la"><li>@tomasmogaburu</li></a>
-                <li>2317-448408</li>
-                <li>tomasmogaburu@gmail.com</li>
-            </ul>
-
-            <strong>Creador de la web</strong>
-                <em>Tomas Mogaburu Boca</em> <br>
-            <strong>Docente a cargo</strong>
-                <em>Emanuel Cabral</em>
-        </footer>
+    <!--Cabecera, navegador e icono-->
+    <header>   
+        <p>welcome to <span>my</span> trip</p>
+    </header>
+    <!--fin del header, ver si agrego algo mas-->
+    <h1>tomas mogaburu boca</h1>
+    <h2>in full stack developer process</h2>
+    <!--descripcion inicial, donde coloco una foto y hablo un poco de lo  que hago-->
+    <main>   
+        <ul>
+            <li>
+                <a href="../../../Proyecto Picantino/index.html">piccantino</a>
+            </li>
+            <li>
+                <a href="./pages/proyectos.html">lolo surf</a>
+            </li>
+        </ul>
+    </main>
 </body>
 </html>
