pag inicio listo, proyecto Lolo iniciado

--- a/index.html
+++ b/index.html
@@ -26,39 +26,13 @@
         <a href="./pages/proyectos.html">my projects</a>
       </li>
       <li>
-        <a href="#">linkedin</a>
+        <a href="https://www.linkedin.com/in/tomas-mogaburu-27527218b/">linkedin</a>
       </li>
       <li>
         <a href="./pages/contacto.html">contacto</a>
       </li>
     </ul>
   </main>
-
-  <!--pie de pagina, redes sociales-->
-  <!--------------<footer class="footer-index">  
-    <ul class="ul-1">
-      <li><img src="./multimedia/instagram-brands.svg" alt="instagram"> <a href="https://www.instagram.com/tomasmogaburu/?hl=es-la">tomasmogaburu</a></li>
-      <li><img src="./multimedia/phone-alt-solid.svg" alt="telefono">  2317-448408</li>
-      <li><img src="./multimedia/envelope-regular.svg" alt="email">  tomasmogaburu@gmail.com</li>
-    </ul>
-    <ul class="ul-2">
-      <li>profesor <span>emanuel cabral</span></li>
-      <li>tutor <span>maria victoria fuceneco</span></li>
-      <li>alumno <span>tomas mogaburu boca</span></li>
-    </ul>   ------------>
-    <div class="subir"> <!--division para subir--
-      <a href="#titulo"><img src="./multimedia/flechita.svg" alt=""></a>
-    </div> ---------------->
-  </footer>
-  
-
-
-
-
-
-
-
-  
 </body>
 </html>
 
