--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,18 +19,16 @@
     <main>   
         <ul>
             <li>
-                <a href="#">my travel</a>
-            </li>
-            <li>
-                <a href="./pages/proyectos.html">email</a>
+                <a href="./pages/contacto.html">instagram</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/tomas-mogaburu-27527218b/">wahts app</a>
             </li>
             <li>
-                <a href="./pages/contacto.html">instagram</a>
+                <a href="https://www.google.com/intl/es-419/gmail/about/">tomasmogaburu@gmail.com</a>
             </li>
         </ul>
     </main>
+    <div class="back"><a href="../index.html">Back to travel</a></div>
 </body>
 </html>
