--- a/pages/mytravel.html
+++ b/pages/mytravel.html
@@ -16,9 +16,10 @@
     <h1>tomas mogaburu boca</h1>
     <h2>in full stack developer process</h2>
     <!--descripcion inicial, donde coloco una foto y hablo un poco de lo  que hago-->
-    <main>   
+    <main class="main-p">   
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis accusamus fugiat autem ipsa voluptatem vitae cum expedita numquam veniam amet! Illum esse vero aperiam fuga amet temporibus perferendis obcaecati incidunt culpa facilis! Deleniti ratione rem exercitationem, modi, pariatur ad tempore reprehenderit similique, repudiandae deserunt minus quae optio! Dicta consectetur laboriosam nemo ratione, quam nobis velit quas iusto reiciendis esse minus distinctio inventore aliquam nulla debitis ab totam quibusdam explicabo provident, nisi amet, natus voluptatibus eaque? Cum veniam pariatur, corporis tempora, quis sint expedita, quam corrupti dicta ducimus impedit odit tempore maxime animi totam natus quaerat? Asperiores repellendus quis perferendis similique.</p>
         </ul>
     </main>
+    <div class="back"><a href="../index.html">Back to travel</a></div>
 </body>
 </html>
