--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilo.css">
     <title>tomas mogaburu boca</title>
-
-
 </head>
 <body>
     <!--Cabecera, navegador e icono-->
@@ -24,9 +22,10 @@
                 <a href="../../../Proyecto Picantino/index.html">piccantino</a>
             </li>
             <li>
-                <a href="./pages/proyectos.html">lolo surf</a>
+                <a href="./lolo surf/surflolo.html">lolo surf</a>
             </li>
         </ul>
     </main>
+    <div class="back"><a href="../index.html">Back to travel</a></div>
 </body>
 </html>
