Lolo ya iniciado, partes definidas. Sin Piccan. 1

--- a/pages/lolo surf/surflolo.html
+++ b/pages/lolo surf/surflolo.html
@@ -22,16 +22,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="./surflolo.html">home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
+                    <a class="nav-link" href="./paginas internas/nosotros.html">nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/deportes.html">Deportes
-                <!--<li><a href="surf.html">surf</a></li>
-                <li><a href="surfskate.html">surf</a></li>-->
-                    </a>
+                    <a class="nav-link" href="#">deportes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./paginas internas/world.html">world</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./pages/contacto.html">contacto</a>
@@ -44,7 +44,7 @@
     <div class="jumbotron">
         <h1>lolo <span>surf</span></h1>
         <p>sentir la magia de las olas</p>
-        <button type="button" class="btn btn-warning">surfea mas</button>
+        <button type="button" class="btn btn-warning"><a href="#">surfea mas</a></button>
     </div>
     <!--banner- fin -->
     <!--secciones donde voy hablar de los deportes principales de la pagina------ inicio -->
@@ -60,14 +60,29 @@
         </div>
         <!--<div class="div div4">
             <div></div>
-            <p></p>
+            <p></p>v
         </div>-->
     </main>
     <!--secciones donde voy hablar de los deportes principales de la pagina------ fin -->
+    <!--seccion de sea mood donde se habla de la vida libre ------ inicio -->
+    <section class="sea">
+        <div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut commodi sunt mollitia voluptate distinctio excepturi eaque voluptatem possimus tempora molestiae veniam iure, magni eligendi quia cum, cumque harum! Harum a, libero hic cumque enim itaque officia quia ipsum debitis, laboriosam amet veritatis sapiente aut ex illo rem, tenetur velit accusamus. 
+                <button>
+                    <a href="./paginas internas/world.html">sea world</a>
+                </button>
+            </p>
+        </div>
+    </section>
+    <!--seccion de sea mood donde se habla de la vida libre ------ fin -->
     <!--seccion de green mood donde se habla de la vida libre ------ inicio -->
     <section class="green">
         <div>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos veniam porro deserunt, sed molestias laudantium consequuntur explicabo eius dolorem quam ullam dicta nobis vitae obcaecati dolorum ipsa maxime mollitia. Ipsum incidunt quia accusamus eos nam pariatur saepe earum, fugit maxime perferendis ipsam laboriosam molestiae consequuntur, asperiores error vitae quibusdam nulla.
+                <button>
+                    <a href="./paginas internas/world.html">green mood</a>
+                </button>
+            </p>
         </div>
     </section>
     <!--seccion de green mood donde se habla de la vida libre ------ fin -->
