--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="./multimedia/trademark-solid.svg">
   <title>Tomas Mogaburu Boca</title>
 </head>
-<body>
+<body class="index">
   <!--Cabecera, navegador e icono-->
   <header>   
     <p>welcome to <span>my</span> trip</p>
